--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "chalk": "^1.1.3",
     "check-node-version": "^1.1.2",
     "cookie-session": "^2.0.0-alpha.1",
+    "d3": "^4.4.1",
     "enzyme": "^2.5.1",
     "epilogue": "^0.7.0",
     "express": "^4.14.0",
@@ -47,6 +48,7 @@
     "pg": "^6.1.0",
     "pg-native": "^1.10.0",
     "react": "^15.3.2",
+    "react-d3-library": "^1.1.7",
     "react-dom": "^15.3.2",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0",
